--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "chart.js": "^2.7.1",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
+    "crypto-js": "^3.1.9-1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-scripts-ts": "2.8.0"
   },
   "scripts": {
