--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "chart.js": "^2.7.1",
     "crypto-js": "^3.1.9-1",
+    "mobx": "^3.4.0",
+    "mobx-react": "^4.3.5",
+    "mobx-react-devtools": "^4.2.15",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts-ts": "2.8.0"
