--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,9 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true
+    "noUnusedLocals": false,
+    "experimentalDecorators": true
+
   },
   "exclude": [
     "node_modules",
