--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,11 +13,10 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
-    "strictNullChecks": true,
+    "strictNullChecks": false,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": false,
     "experimentalDecorators": true
-
   },
   "exclude": [
     "node_modules",
