--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
     "chart.js": "^2.7.1",
     "crypto-js": "^3.1.9-1",
     "mobx": "^3.4.0",
-    "mobx-react": "^4.3.5",
-    "mobx-react-devtools": "^4.2.15",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts-ts": "2.8.0"
+    "react-scripts-ts": "^2.10.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -20,11 +18,15 @@
   },
   "devDependencies": {
     "@types/chart.js": "^2.7.3",
-    "@types/jest": "^21.1.8",
-    "@types/node": "^8.5.2",
-    "@types/react": "^16.0.31",
+    "@types/classnames": "^2.2.3",
+    "@types/jest": "^22.0.1",
+    "@types/node": "^9.3.0",
+    "@types/react": "^16.0.34",
     "@types/react-dom": "^16.0.3",
     "axios": "^0.17.1",
-    "react-chartjs-2": "^2.6.4"
+    "classnames": "^2.2.5",
+    "mobx-react": "^4.3.5",
+    "mobx-react-devtools": "^4.2.15",
+    "react-chartjs-2": "^2.7.0"
   }
 }
