--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "charts",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "https://koyta.github.io/crypto-charts-ts/",
   "dependencies": {
     "chart.js": "^2.7.1",
     "crypto-js": "^3.1.9-1",
