--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
   "dependencies": {
-    "express": "^4.16.2"
+    "axios": "^0.17.1",
+    "bitcoinaverage": "^0.1.4",
+    "crypto-js": "^3.1.9-1",
+    "express": "^4.16.2",
+    "socket.io": "^2.0.4",
+    "websocket": "^1.0.25",
+    "ws": "^4.0.0"
   },
   "devDependencies": {
     "concurrently": "^3.5.0"
