--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
   },
-  "proxy": "http://localhost:5000/",
+  "proxy": "http://localhost:5000",
   "devDependencies": {
     "@types/chart.js": "^2.7.3",
     "@types/classnames": "^2.2.3",
@@ -24,10 +24,12 @@
     "@types/node": "^9.3.0",
     "@types/react": "^16.0.34",
     "@types/react-dom": "^16.0.3",
+    "@types/ws": "^4.0.0",
     "axios": "^0.17.1",
     "classnames": "^2.2.5",
     "mobx-react": "^4.3.5",
     "mobx-react-devtools": "^4.2.15",
-    "react-chartjs-2": "^2.7.0"
+    "react-chartjs-2": "^2.7.0",
+    "ws": "^4.0.0"
   }
 }
