--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "cors": "^2.8.4",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.2",
-    "ws": "^4.0.0"
+    "ws": "^4.0.0",
+    "react-scripts-ts": "2.13.0"
   },
   "devDependencies": {
     "concurrently": "^3.5.0"
