--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.2",
     "ws": "^4.0.0",
-    "react-scripts-ts": "2.13.0"
+    "react-scripts-ts": "^2.13.0",
+    "typescript": "^2.7.2"
   },
   "devDependencies": {
     "concurrently": "^3.5.0"
