--- a/package.json
+++ b/package.json
@@ -18,6 +18,19 @@
     "mobx": "^3.4.0"
   },
   "devDependencies": {
-    "concurrently": "^3.5.0"
+    "concurrently": "^3.5.0",
+    "@types/chart.js": "^2.7.3",
+    "@types/classnames": "^2.2.3",
+    "@types/jest": "^22.0.1",
+    "@types/node": "^9.3.0",
+    "@types/react": "^16.0.34",
+    "@types/react-dom": "^16.0.3",
+    "@types/ws": "^4.0.0",
+    "axios": "^0.17.1",
+    "classnames": "^2.2.5",
+    "mobx-react": "^4.3.5",
+    "mobx-react-devtools": "^4.2.15",
+    "react-chartjs-2": "^2.7.0",
+    "ws": "^4.0.0"
   }
 }
