--- a/package.json
+++ b/package.json
@@ -4,33 +4,18 @@
   "scripts": {
     "client": "cd client && npm start",
     "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "postinstall": "npm install --prefix client",
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^0.17.1",
     "cors": "^2.8.4",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.2",
-    "ws": "^4.0.0",
-    "react-scripts-ts": "^2.13.0",
-    "typescript": "^2.7.2",
-    "chart.js": "^2.7.1",
-    "mobx": "^3.4.0"
+    "ws": "^4.0.0"
   },
   "devDependencies": {
-    "concurrently": "^3.5.0",
-    "@types/chart.js": "^2.7.3",
-    "@types/classnames": "^2.2.3",
-    "@types/jest": "^22.0.1",
-    "@types/node": "^9.3.0",
-    "@types/react": "^16.0.34",
-    "@types/react-dom": "^16.0.3",
-    "@types/ws": "^4.0.0",
-    "axios": "^0.17.1",
-    "classnames": "^2.2.5",
-    "mobx-react": "^4.3.5",
-    "mobx-react-devtools": "^4.2.15",
-    "react-chartjs-2": "^2.7.0",
-    "ws": "^4.0.0"
+    "concurrently": "^3.5.0"
   }
 }
