--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-
-/**/node_modules
-/*/node_modules
+node_modules
+client/node_modules
 
 # testing
 /coverage
 
 # production
 /build
+client/build
 
 # misc
 .DS_Store
@@ -18,10 +17,19 @@
 .env.development.local
 .env.test.local
 .env.production.local
+client/.DS_Store
+client/.env.local
+client/.env.development.local
+client/.env.test.local
+client/.env.production.local
+
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+client/npm-debug.log*
+client/yarn-debug.log*
+client/yarn-error.log*
 
 # idea
 .idea
