--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "chart.js": "^2.7.1",
     "crypto-js": "^3.1.9-1",
     "mobx": "^3.4.0",
+    "mobx-react": "^4.3.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts-ts": "^2.10.0"
@@ -24,13 +25,10 @@
     "@types/node": "^9.3.0",
     "@types/react": "^16.0.34",
     "@types/react-dom": "^16.0.3",
-    "@types/ws": "^4.0.0",
     "axios": "^0.17.1",
     "classnames": "^2.2.5",
-    "mobx-react": "^4.3.5",
     "mobx-react-devtools": "^4.2.15",
-    "react-chartjs-2": "^2.7.0",
-    "ws": "^4.0.0"
+    "react-chartjs-2": "^2.7.0"
   },
   "optionalDependencies": {
     "bufferutil": "^3.0.3",
