--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "mobx-react": "^4.3.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts-ts": "^2.10.0"
+    "react-scripts-ts": "^2.10.0",
+    "axios": "^0.17.1",
+    "react-chartjs-2": "^2.7.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -25,10 +27,8 @@
     "@types/node": "^9.3.0",
     "@types/react": "^16.0.34",
     "@types/react-dom": "^16.0.3",
-    "axios": "^0.17.1",
     "classnames": "^2.2.5",
-    "mobx-react-devtools": "^4.2.15",
-    "react-chartjs-2": "^2.7.0"
+    "mobx-react-devtools": "^4.2.15"
   },
   "optionalDependencies": {
     "bufferutil": "^3.0.3",
