--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,15 @@
     "react-dom": "^16.2.0",
     "react-scripts-ts": "^2.10.0",
     "axios": "^0.17.1",
-    "react-chartjs-2": "^2.7.0"
+    "react-chartjs-2": "^2.7.0",
+    "@types/chart.js": "^2.7.3",
+    "@types/classnames": "^2.2.3",
+    "@types/jest": "^22.0.1",
+    "@types/node": "^9.3.0",
+    "@types/react": "^16.0.34",
+    "@types/react-dom": "^16.0.3",
+    "classnames": "^2.2.5",
+    "mobx-react-devtools": "^4.2.15"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -21,14 +29,6 @@
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
-    "@types/chart.js": "^2.7.3",
-    "@types/classnames": "^2.2.3",
-    "@types/jest": "^22.0.1",
-    "@types/node": "^9.3.0",
-    "@types/react": "^16.0.34",
-    "@types/react-dom": "^16.0.3",
-    "classnames": "^2.2.5",
-    "mobx-react-devtools": "^4.2.15"
   },
   "optionalDependencies": {
     "bufferutil": "^3.0.3",
